[tool.poetry]
name = "adopt"
version = "0.0.84"
description = ""
authors = ["Nandan Rao <nandanmarkrao@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyYAML = "^5.4.1"
backoff = "^1.10.0"
environs = "^9.3.2"
facebook-business = "^16.0.2"
numpy = "^1.22.1"
pandas = "1.5.3"
pystache = "^0.6.0"
requests = "^2.25.1"
scipy = "^1.6.3"
toolz = "^0.11.1"
typedjson = {git = "https://github.com/nandanrao/typedjson-python", rev = "86138a64a9642bb811a79273d0d8dcbfbfe6b5cc"}
psycopg = {extras = ["binary", "pool"], version = "^3.0.9"}
openpyxl = "^3.0.9"
orjson = "^3.6.6"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
future = "^0.18.2"
pytest = "^6.2.4"
pytest-xdist = "^2.2.1"
coverage = "^5.5"
python-lsp-server = {extras = ["all"], version = "^1.3.3"}
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.931"
pylsp-mypy = "^0.5.7"
python-lsp-black = "^1.0.1"
pyls-isort = "^0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"