[tool.poetry]
name = "adopt"
version = "0.0.84"
description = ""
authors = ["Nandan Rao <nandanmarkrao@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyYAML = "^6.0.1"
backoff = "^1.10.0"
environs = "^9.3.2"
facebook-business = "^20.0.0"
numpy = "^1.22.1"
pandas = "1.5.3"
pystache = "^0.6.0"
requests = "^2.25.1"
scipy = "^1.6.3"
toolz = "^0.11.1"
psycopg = {extras = ["binary", "pool"], version = "^3.0.9"}
openpyxl = "^3.0.9"
orjson = "^3.6.6"
pydantic = "^2.5.2"
fastapi = "^0.105.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.25.2"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.group.dev.dependencies]
future = "^0.18.2"
pytest = "^6.2.4"
pytest-xdist = "^2.2.1"
coverage = "^5.5"
types-requests = "^2.31.0.10"
types-pyyaml = "^6.0.12.12"
python-lsp-server = {extras = ["all"], version = "^1.9.0"}
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pylsp-mypy = "^0.6.8"
python-lsp-black = "^2.0.0"
pyls-isort = "^0.2.2"
pylsp-rope = "^0.1.11"
types-python-jose = "^3.3.4.8"
pandas-stubs = "^2.1.4.231218"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"