[tool.poetry]
name = "facebook-recruitment-connector"
version = "0.1.0"
description = ""
authors = ["Nandan Rao <nandanmarkrao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["all"], version = "^1.3.3"}
future = "^0.18.2"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.931"
pylsp-mypy = "^0.5.7"
python-lsp-black = "^1.0.1"
pyls-isort = "^0.2.2"
pytest = "^6.2.5"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
